# fuzzy_prefix_search

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: jaro_winkler.rs  lib.rs  trie.rs
tests/: trie_tests.rs
