[package]
name = "fuzzy_prefix_search"
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpisto/fuzzy_prefix_search"
homepage = "https://github.com/tpisto/fuzzy_prefix_search"
description = "Fuzzy search for prefix matches"
keywords = [
    "fuzzy",
    "search",
    "trie",
    "levenshtein",
    "prefix"
]

[dependencies]

[profile.release]
debug = true
